WEB-9736: fix all heros top spacing

--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -7,13 +7,15 @@
 5 - hero-blog
 /// END TABLE OF CONTENTS **/
 
-.hero {
+[class^="hero"][class*="__section"] {
   margin-top: 8rem;
 
   @include breakpoint(desktop) {
     margin-top: 0;
   }
-  
+}
+
+.hero {  
   /** 1 - hero-video
   ------------------------------------------------------------*/
   &-video {
